syntax = "proto3";

package ip;

option go_package = "./proto;ip";

service Ip {
	rpc Lookup(LookupRequest) returns (LookupResponse) {}
}

// Lookup the geolocation information for an IP address
message LookupRequest {
	string ip = 1;
}

message LookupResponse {
	string ip = 1;
	int64 asn = 2;
	string city = 3;
	string country = 4;
	double latitude = 5;
	double longitude = 6;
	string timezone = 7;
}

